--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
     "deploy": "next build"
   },
   "dependencies": {
-    "next": "^15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "framer-motion": "^11.5.4",
-    "next-mdx-remote": "^5.0.0",
     "gray-matter": "^4.0.3",
-    "next-themes": "^0.3.0"
+    "lucide-react": "^0.552.0",
+    "next": "^15.0.2",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.6.2",
-    "tailwindcss": "^3.4.12",
-    "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.2",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "@tailwindcss/typography": "^0.5.15"
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2"
   }
 }
