--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,13 @@
     "id": "ai-chatbot",
     "title": "AI Chatbot Assistant",
     "description": "An intelligent chatbot built with GPT-4 and LangChain, featuring context-aware conversations and memory management.",
-    "stack": ["Python", "LangChain", "OpenAI", "FastAPI", "React"],
+    "stack": [
+      "Python",
+      "LangChain",
+      "OpenAI",
+      "FastAPI",
+      "React"
+    ],
     "image": "/images/projects/chatbot.jpg",
     "link": "https://github.com/abhayrajput/ai-chatbot",
     "featured": true
@@ -12,7 +18,12 @@
     "id": "image-classifier",
     "title": "Image Classification Model",
     "description": "Deep learning model for multi-class image classification using PyTorch and transfer learning with ResNet50.",
-    "stack": ["Python", "PyTorch", "Computer Vision", "Flask"],
+    "stack": [
+      "Python",
+      "PyTorch",
+      "Computer Vision",
+      "Flask"
+    ],
     "image": "/images/projects/classifier.jpg",
     "link": "https://github.com/abhayrajput/image-classifier",
     "featured": true
@@ -21,7 +32,12 @@
     "id": "sentiment-analyzer",
     "title": "Sentiment Analysis Tool",
     "description": "NLP-based sentiment analysis tool that processes social media data and provides real-time insights.",
-    "stack": ["Python", "Transformers", "BERT", "Streamlit"],
+    "stack": [
+      "Python",
+      "Transformers",
+      "BERT",
+      "Streamlit"
+    ],
     "image": "/images/projects/sentiment.jpg",
     "link": "https://github.com/abhayrajput/sentiment-analyzer",
     "featured": false
@@ -30,9 +46,36 @@
     "id": "recommendation-system",
     "title": "Movie Recommendation Engine",
     "description": "Collaborative filtering recommendation system using matrix factorization and neural networks.",
-    "stack": ["Python", "TensorFlow", "Pandas", "NumPy"],
+    "stack": [
+      "Python",
+      "TensorFlow",
+      "Pandas",
+      "NumPy"
+    ],
     "image": "/images/projects/recommender.jpg",
     "link": "https://github.com/abhayrajput/movie-recommender",
+    "featured": false
+  },
+  {
+    "id": "project-1762369583804",
+    "title": "New Project",
+    "description": "Project description",
+    "stack": [
+      "Technology"
+    ],
+    "image": "/images/projects/placeholder.jpg",
+    "link": "https://github.com/yourusername/project",
+    "featured": false
+  },
+  {
+    "id": "project-1762369586379",
+    "title": "New Project",
+    "description": "Project description",
+    "stack": [
+      "Technology"
+    ],
+    "image": "/images/projects/placeholder.jpg",
+    "link": "https://github.com/yourusername/project",
     "featured": false
   }
 ]
