--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "next build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.79.0",
     "framer-motion": "^11.5.4",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.552.0",
